--- a/src/pages/cart/styles.scss
+++ b/src/pages/cart/styles.scss
@@ -19,7 +19,7 @@ $text-color: #333;
     color: #ff4500;
     span {
       color: #000;
-      font-weight: normal;
+      font-weight: bold;
     }
   }
   .cart-item-card {
