--- a/src/pages/product/styles.scss
+++ b/src/pages/product/styles.scss
@@ -10,7 +10,51 @@ $text-color: #333;
 .home-page {
   padding: 20px 100px;
   max-width: $max-width;
-  margin: 0 auto;
+
+  .filter-product-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: $spacing-large;
+    flex-wrap: wrap;
+
+    .filter-item {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 16px;
+      color: $text-color;
+      padding: $spacing-small;
+      background-color: #f7f7f7;
+      border-radius: 25px;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+
+      &:hover {
+        background-color: #e2e2e2;
+        transform: scale(1.05);
+      }
+
+      .filter-label {
+        margin-right: $spacing-small;
+        font-weight: 600;
+      }
+
+      .filter-input {
+        padding: $spacing-small;
+        border-radius: 8px;
+        border: 1px solid #ddd;
+        font-size: 14px;
+        color: $text-color;
+        width: 3350px;
+        transition: border-color 0.3s ease;
+
+        &:focus {
+          outline: none;
+          border-color: $primary-color;
+        }
+      }
+    }
+  }
 
   .title {
     font-size: 28px;
@@ -33,7 +77,7 @@ $text-color: #333;
     align-items: center;
 
     .search-input {
-      width: 80%;
+      width: 100%;
       max-width: 400px;
       padding: $spacing-small;
       border-radius: 4px;
